@@ -144,12 +144,24 @@ substituteOperators <- function(algebra) {
 	return(algebra)
 }
 
+# Any time mxEval() is called by one of the helper functions,
+# we make sure to use oldFlatModel which does not have the autoboxing
+# transformations.  Any error messages generated by oldFlatModel
+# will not show the autoboxed matrices.
 checkEvaluation <- function(model, flatModel, oldFlatModel) {
 	labelsData <- omxGenerateLabels(model)
+	checkMatrixEvaluation(model, oldFlatModel, labelsData)
 	flatModel <- checkAlgebraEvaluation(model, flatModel, oldFlatModel, labelsData)
 	checkConstraintEvaluation(model, oldFlatModel, labelsData)
-	checkSquareBracketEvaluation(model, oldFlatModel, labelsData)
 	return(flatModel)
+}
+
+checkMatrixEvaluation <- function(model, flatModel, labelsData) {
+	if(length(flatModel@matrices) == 0) { return() }
+	for(i in 1:length(flatModel@matrices)) {
+		matrix <- flatModel@matrices[[i]]
+		eval(computeSymbol(as.symbol(matrix@name), flatModel, labelsData))
+	}
 }
 
 checkAlgebraEvaluation <- function(model, retval, flatModel, labelsData) {
