@@ -41,19 +41,17 @@ multilevelModel2 <- mxModel("Multilevel_2",
         free=TRUE, 
         name="Rand"
     ),
-	mxMatrix("Full", 1, 1, values = 1, labels = "data.ID", name = "currentID"),
-	mxAlgebra(Rand[currentID,], name = "currentRand"),
     mxMatrix("Full", 2, 2, 
         labels=c(NA,  NA,
-                "currentRand[1,1]", NA), 
+                "Rand[data.ID,1]", NA), 
         free=FALSE, 
         name="A", 
         byrow=TRUE
     ),
     mxMatrix("Symm", 2, 2,
         free=FALSE, 
-        labels=c("currentRand[1,4]",
-                 NA, "currentRand[1,5]"), 
+        labels=c("Rand[data.ID,4]",
+                 NA, "Rand[data.ID,5]"), 
         name="S", 
         byrow=TRUE
     ),
@@ -69,7 +67,7 @@ multilevelModel2 <- mxModel("Multilevel_2",
     mxMatrix("Full", nrow=1, ncol=length(manifestVars),
         values=1,
         free=FALSE,
-        labels=c("currentRand[1,2]", "currentRand[1,3]"),
+        labels=c("Rand[data.ID,2]", "Rand[data.ID,3]"),
         dimnames=list(NULL, manifestVars),
         name="M"
     ),
