@@ -49,11 +49,8 @@ omxCheckError(mxRun(model2), paste("The algebras/matrices",
 A <- mxMatrix('Full', 1, 1, name = 'A')
 B <- mxMatrix('Full', 1, 1, name = 'B', labels = 'A[0,0]')
 model <- mxModel('model', A, B)
-mxRun(model)
-omxCheckError(mxMatrix('Full', 1, 1, name = 'B', labels = 'A[foo,bar]'),
-	paste("The reference 'A[foo,bar]' in matrix 'B'",
-	"is illegal because it has square brackets but it is",
-	"not a valid substitution")) 
+omxCheckError(mxRun(model), paste("The label 'A[0, 0]' of matrix 'B'",
+	"in model 'model' does not evaluate to a (1 x 1) matrix."))
 kevin <- 'bacon'
 B <- mxAlgebra(A[kevin, ], name = 'B')
 dimnames(A) <- list('Tom', 'Cruise')
